[package]
name = "nba_stats"
version = "0.1.0"
authors = ["AleeBadara <mbaye.alioune.badara@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.2", features=["blocking", "json"]}
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
chrono = "0.4"